Proposed fix for bug #3818 (libmysqld.dll leads to program's crash) configurations added to build the libraries with USE_TLS flag to be used for libmysqld